@@ -4,7 +4,10 @@
   <ul id="act-nav" class="clear">
   <% if admin? || @article.user_id == current_user.id -%>
     <li><%= link_to_remote 'Delete this article', :url => {:action => 'destroy', :id => @article}, :confirm => 'Are you sure you want to delete this article?' %></li>
-    <li><%= link_to 'Close comments for this article', '' %></li>
+  <% unless @article.comment_age == -1 -%>
+    <li id="close-article-comments"><%= link_to_remote 'Close comments for this article', 
+      :url => { :controller => 'admin/comments', :action => 'close', :id => @article } %></li>
+  <% end -%>
   <% end -%>
   <% if controller.action_name == 'edit' -%>
     <li><%= link_to('Preview', {:action => 'show', :id => @article}, {:target => '_blank'}) %></li>
