@@ -1,5 +1,7 @@
 * SVN *
 
+* Add shortcut to disable comments on an article from the comment moderation page.
+
 * 0.7.1 PRE-RELEASE *
 
 * add more robust tagging [Moritz Angermann]
